[package]
name = "vinci_core"
version = "0.0.1"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vinci_core"

[dependencies]
futures = "*"
async-std = "1.2.0"

[dev-dependencies]
criterion = "0.3"
walkdir = "2.2.9"
rayon = "1.2.1"

[[bench]]
name = "benchmarks"
harness = false